# histogram

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8h.html  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  classHistState-members.html  classHistState.html  classes.html  classhist_1_1App-members.html  classhist_1_1App.html  classhist_1_1HistController-members.html  classhist_1_1HistController.html  classhist_1_1HistController__coll__graph.md5  classhist_1_1HistController__inherit__graph.map  classhist_1_1HistPageController-members.html  classhist_1_1HistPageController.html  classhist_1_1HistPageController__inherit__graph.map  classhist_1_1HistPageController__inherit__graph.md5  classhist_1_1HistState-members.html  classhist_1_1HistState.html  classhist_1_1HistState__inherit__graph.map  classhist_1_1HistState__inherit__graph.md5  classhist_1_1InitController-members.html  classhist_1_1InitController.html  classhist_1_1InitController__coll__graph.md5  classhist_1_1InitController__inherit__graph.map  classhist_1_1InitState-members.html  classhist_1_1InitState.html  classhist_1_1InitState__coll__graph.md5  classhist_1_1InitState__inherit__graph.map  (+315 more)
.github/workflows/: docs.yml  release.yml
resources/: app.qrc
resources/test/: test.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+42 more)
src/: app.cpp  app.h  main.cpp
src/app_states/: hist_state.cpp  hist_state.hpp  init_state.cpp  init_state.hpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  states.hpp
src/config/: settings.hpp
src/controllers/: hist_controller.cpp  hist_controller.hpp  hist_page_controller.cpp  hist_page_controller.hpp  init_controller.cpp  init_controller.hpp
src/models/: hist_model.cpp  hist_model.hpp
src/qml/: qml.qrc
src/qml/components/: Clock.qml  HButton.qml  HProgressBar.qml  Histogram.qml
src/qml/components/controllers/: HFileSystemDialogControl.qml
src/qml/pages/: Hist.qml  Main.qml  app.qml
src/services/: navigation_service.cpp  navigation_service.hpp  qml_service.cpp  qml_service.hpp  register_types_service.cpp  register_types_service.hpp  states_service.cpp  states_service.hpp  storage.cpp  storage.hpp
src/utility/: h_concepts.hpp  messages.cpp  messages.hpp  structures.hpp  styles.cpp  styles.hpp  thread_pool.cpp  thread_pool.hpp  types.hpp
